--- a/.config/compton/compton.conf
+++ b/.config/compton/compton.conf
@@ -105,9 +105,9 @@ shadow-ignore-shaped = false;
 #
 #################################
 
-inactive-opacity = 1;
-active-opacity = 1;
-frame-opacity = 1;
+inactive-opacity = 0.8;
+active-opacity = 0.8;
+frame-opacity = 0.8;
 inactive-opacity-override = false;
 
 # Dim inactive windows. (0.0 - 1.0)
@@ -119,9 +119,13 @@ inactive-dim = 0.1;
 # Blur background of opaque windows with transparent frames as well.
 # blur-background-frame = true;
 
-blur-method = "kawase";
-blur-strength = 20;
-blur-kern = "3x3box";
+opacity-rule = [
+	"80:class_g = 'vim'"
+];
+
+#blur-method = "kawase";
+#blur-strength = 20;
+#blur-kern = "3x3box";
 
 # Do not let blur radius adjust based on window opacity.
 blur-background-fixed = false;
