--- a/.config/termite/config
+++ b/.config/termite/config
@@ -40,39 +40,35 @@ hyperlinks = true
 # "off", "left" or "right"
 #scrollbar = off
 
+# Solarized dark color scheme
+
 [colors]
-# If both of these are unset, cursor falls back to the foreground color,
-# and cursor_foreground falls back to the background color.
-#cursor = #dcdccc
-#cursor_foreground = #dcdccc
+foreground = #839496
+foreground_bold = #eee8d5
+#foreground_dim = #888888
+background = rgba(00,43,54,0.7)
+cursor = #93a1a1
 
-foreground = #cacaca
-foreground_bold = #cacaca
-background = #1d1f21
+# if unset, will reverse foreground and background
+#highlight = #839496
 
-# 20% background transparency (requires a compositor)
-background = rgba(63, 63, 63, 0.8)
-
-# If unset, will reverse foreground and background
-highlight = #2f2f2f
-
-# Colors from color0 to color254 can be set
-color0 = #282a2e
-color1 = #a54242
-color2 = #8c9440
-color3 = #f0c674
-color4 = #5f819d
-color5 = #b294bb
-color6 = #8abeb7
-color7 = #cacaca
-color8 = #373b41
-color9 = #cc6666
-color10 = #b5bd68
-color11 = #f0c674
-color12 = #81a2be
-color13 = #b294bb
-color14 = #8abeb7
-color15 = #cacaca
+# colors from color0 to color254 can be set
+color0 = #073642
+color1 = #dc322f
+color2 = #859900
+color3 = #b58900
+color4 = #268bd2
+color5 = #d33682
+color6 = #2aa198
+color7 = #eee8d5
+color8 = #002b36
+color9 = #cb4b16
+color10 = #586e75
+color11 = #657b83
+color12 = #839496
+color13 = #6c71c4
+color14 = #93a1a1
+color15 = #fdf6e3
 
 [hints]
 #font = Monospace 12
